--- a/main/core/theme/mb/templates/base.html
+++ b/main/core/theme/mb/templates/base.html
@@ -1,150 +1,150 @@
 {% load static %}
 <!DOCTYPE html>
 <html lang="ru" class="">
-  <head>
-    <title>{{ title }}</title>
-    <meta charset="UTF-8" />
-    <meta name="format-detection" content="telephone=no" />
-    <!-- <style>body{opacity: 0;}</style> -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
-    <link rel="stylesheet" href="{% static 'theme/mb/css/main.css' %}" />
-    <link rel="shortcut icon" href="favicon.ico" />
-    <!-- <meta name="robots" content="noindex, nofollow"> -->
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet" />
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css?_v=20240126172157"
-      integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA=="
-      crossorigin="anonymous"
-      referrerpolicy="no-referrer"
-    />
-  </head>
 
-  <body>
-    <div class="wrapper">
-      {% if request.path == '/' %} {% include "./components/header.html" %} {% else %} {% include "./components/header-single.html" %} {% endif %} {% block content %}{% endblock %}
-      {% include "./components/footer.html" %} {% include "./components/notification/modal.html" %} {% include "./components/mini-cart.html" %}
-    </div>
-    <script
-      src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"
-      integrity="sha512-v2CJ7UaYy4JwqLDIrZUI/4hqeoQieOmAZNXBeQyjo21dadnwR+8ZaIJVT8EE2iyI61OV8e6M8PP2/4hpQINQ/g=="
-      crossorigin="anonymous"
-      referrerpolicy="no-referrer"
-    ></script>
+<head>
+  <title>{{ title }}</title>
+  <meta charset="UTF-8" />
+  <meta name="format-detection" content="telephone=no" />
+  <!-- <style>body{opacity: 0;}</style> -->
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
+  <link rel="stylesheet" href="{% static 'theme/mb/css/main.css' %}" />
+  <link rel="shortcut icon" href="favicon.ico" />
+  <!-- <meta name="robots" content="noindex, nofollow"> -->
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
+    rel="stylesheet" />
+  <link rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css?_v=20240126172157"
+    integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
+</head>
 
-    <script>
-      // Теперь + - количества товара
-      // Обработчик события для уменьшения значения
-      $(document).on("click", ".decrement", function () {
-        // Берем ссылку на контроллер django из атрибута data-cart-change-url
-        var url = $(this).data("cart-change-url");
-        // Берем id корзины из атрибута data-cart-id
-        var cartID = $(this).data("cart-id");
-        // Ищем ближайшеий input с количеством
-        var $input = $(this).closest(".mini-cart__counter").find(".number");
-        // Берем значение количества товара
-        var currentValue = parseInt($input.val());
-        // Если количества больше одного, то только тогда делаем -1
-        if (currentValue > 1) {
-          $input.val(currentValue - 1);
-          // Запускаем функцию определенную ниже
-          // с аргументами (id карты, новое количество, количество уменьшилось или прибавилось, url)
-          updateCart(cartID, currentValue - 1, -1, url);
-        }
-      });
+<body>
+  <div class="wrapper">
+    {% if request.path == '/' %} {% include "./components/header.html" %} {% else %}
+    {% include "./components/header-single.html" %} {% endif %} {% block content %}
+    {% endblock %}
+    {% include "./components/footer.html" %} {% include "./components/notification/modal.html" %}
+    {% include "./components/mini-cart.html" %}
+  </div>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"
+    integrity="sha512-v2CJ7UaYy4JwqLDIrZUI/4hqeoQieOmAZNXBeQyjo21dadnwR+8ZaIJVT8EE2iyI61OV8e6M8PP2/4hpQINQ/g=="
+    crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 
-      // Обработчик события для увеличения значения
-      $(document).on("click", ".increment", function () {
-        // Берем ссылку на контроллер django из атрибута data-cart-change-url
-        var url = $(this).data("cart-change-url");
-        // Берем id корзины из атрибута data-cart-id
-        var cartID = $(this).data("cart-id");
-        // Ищем ближайшеий input с количеством
-        var $input = $(this).closest(".mini-cart__counter").find(".number");
-        // Берем значение количества товара
-        var currentValue = parseInt($input.val());
-
-        $input.val(currentValue + 1);
-
+  <script>
+    // Теперь + - количества товара
+    // Обработчик события для уменьшения значения
+    $(document).on("click", ".decrement", function () {
+      // Берем ссылку на контроллер django из атрибута data-cart-change-url
+      var url = $(this).data("cart-change-url");
+      // Берем id корзины из атрибута data-cart-id
+      var cartID = $(this).data("cart-id");
+      // Ищем ближайшеий input с количеством
+      var $input = $(this).closest(".mini-cart__counter").find(".number");
+      // Берем значение количества товара
+      var currentValue = parseInt($input.val());
+      // Если количества больше одного, то только тогда делаем -1
+      if (currentValue > 1) {
+        $input.val(currentValue - 1);
         // Запускаем функцию определенную ниже
         // с аргументами (id карты, новое количество, количество уменьшилось или прибавилось, url)
-        updateCart(cartID, currentValue + 1, 1, url);
-      });
-
-      function updateCart(cartID, quantity, change, url) {
-        $.ajax({
-          type: "POST",
-          url: url,
-          data: {
-            cart_id: cartID,
-            quantity: quantity,
-            csrfmiddlewaretoken: $("[name=csrfmiddlewaretoken]").val(),
-          },
-
-          success: function (data) {
-            // Изменяем количество товаров в корзине
-            var goodsInCartCount = $("#mini-cart-count");
-            var cartCount = parseInt(goodsInCartCount.text() || 0);
-            cartCount += change;
-            goodsInCartCount.text(cartCount);
-
-            // Меняем содержимое корзины
-            var cartItemsContainer = $("#cart-item");
-            cartItemsContainer.html(data.cart_items_html);
-          },
-          error: function (data) {
-            console.log("Ошибка при добавлении товара в корзину");
-          },
-        });
+        updateCart(cartID, currentValue - 1, -1, url);
       }
-    </script>
-    <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
-    {% comment %}
-    <script type="module">
-      import Swiper from "https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.mjs";
+    });
 
-      const swiper = new Swiper(".index-slider__slider", {
-        effect: "fade",
-        loop: true,
-        navigation: {
-          nextEl: ".index-slider__next",
-          prevEl: ".index-slider__prev",
+    // Обработчик события для увеличения значения
+    $(document).on("click", ".increment", function () {
+      // Берем ссылку на контроллер django из атрибута data-cart-change-url
+      var url = $(this).data("cart-change-url");
+      // Берем id корзины из атрибута data-cart-id
+      var cartID = $(this).data("cart-id");
+      // Ищем ближайшеий input с количеством
+      var $input = $(this).closest(".mini-cart__counter").find(".number");
+      // Берем значение количества товара
+      var currentValue = parseInt($input.val());
+
+      $input.val(currentValue + 1);
+
+      // Запускаем функцию определенную ниже
+      // с аргументами (id карты, новое количество, количество уменьшилось или прибавилось, url)
+      updateCart(cartID, currentValue + 1, 1, url);
+    });
+
+    function updateCart(cartID, quantity, change, url) {
+      $.ajax({
+        type: "POST",
+        url: url,
+        data: {
+          cart_id: cartID,
+          quantity: quantity,
+          csrfmiddlewaretoken: $("[name=csrfmiddlewaretoken]").val(),
+        },
+
+        success: function (data) {
+          // Изменяем количество товаров в корзине
+          var goodsInCartCount = $("#mini-cart-count");
+          var cartCount = parseInt(goodsInCartCount.text() || 0);
+          cartCount += change;
+          goodsInCartCount.text(cartCount);
+
+          // Меняем содержимое корзины
+          var cartItemsContainer = $("#cart-item");
+          cartItemsContainer.html(data.cart_items_html);
+        },
+        error: function (data) {
+          console.log("Ошибка при добавлении товара в корзину");
         },
       });
+    }
+  </script>
+  <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
+  {% comment %}
+  <script type="module">
+    import Swiper from "https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.mjs";
 
-      const swiper_reviews = new Swiper(".index-reviews__slider", {
-        slidesPerView: 3,
-        //slidesPerGroup: 1,
-        loop: true,
-        navigation: {
-          nextEl: ".index-reviews__next",
-          prevEl: ".index-reviews__prev",
-        },
-      });
+    const swiper = new Swiper(".index-slider__slider", {
+      effect: "fade",
+      loop: true,
+      navigation: {
+        nextEl: ".index-slider__next",
+        prevEl: ".index-slider__prev",
+      },
+    });
 
-      const swiper_about = new Swiper(".index-about__slider", {
-        slidesPerView: 1,
-        //slidesPerGroup: 1,
-        loop: true,
-        navigation: {
-          nextEl: ".index-reviews__next",
-          prevEl: ".index-reviews__prev",
-        },
-        autoplay: {
-          delay: 5000,
-        },
+    const swiper_reviews = new Swiper(".index-reviews__slider", {
+      slidesPerView: 3,
+      //slidesPerGroup: 1,
+      loop: true,
+      navigation: {
+        nextEl: ".index-reviews__next",
+        prevEl: ".index-reviews__prev",
+      },
+    });
 
-        pagination: {
-          el: ".swiper-pagination",
-          type: "bullets",
-        },
-      }); {% endcomment %}
-    </script>
-    <script src="{% static 'theme/mb/js/index.js' %}"></script>
-  </body>
+    const swiper_about = new Swiper(".index-about__slider", {
+      slidesPerView: 1,
+      //slidesPerGroup: 1,
+      loop: true,
+      navigation: {
+        nextEl: ".index-reviews__next",
+        prevEl: ".index-reviews__prev",
+      },
+      autoplay: {
+        delay: 5000,
+      },
+
+      pagination: {
+        el: ".swiper-pagination",
+        type: "bullets",
+      },
+    }); {% endcomment %}
+  </script>
+  <script src="{% static 'theme/mb/js/index.js' %}"></script>
+</body>
+
 </html>
