--- a/#src/scss/home.scss
+++ b/#src/scss/home.scss
@@ -730,3 +730,182 @@
     box-shadow: 0px 11px 24px 0px rgba(65, 162, 208, 0.15), 0px 44px 44px 0px rgba(65, 162, 208, 0.13), 0px 99px 60px 0px rgba(65, 162, 208, 0.08), 0px 177px 71px 0px rgba(65, 162, 208, 0.02), 0px 276px 77px 0px rgba(65, 162, 208, 0);
   }
 }
+
+
+/*
+  Страница услуги
+*/
+._aBg {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.hero {
+  position: relative;
+
+  // .hero__image
+  &__image {
+    object-position: right;
+  }
+
+  .breadcrumbs {
+    margin: 0px 0px 20px;
+  }
+
+
+  // .hero__container
+
+  &__container {
+    position: relative;
+    z-index: 2;
+  }
+
+  // .hero__inner
+
+  &__inner {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    padding: 80px 0px;
+  }
+
+  // .hero__title
+
+  &__title {
+    font-size: 45px;
+    text-wrap: balance;
+    line-height: 120%;
+    text-transform: uppercase;
+    margin-bottom: 20px;
+    color: rgba($color: $mainColor, $alpha: 1.0);
+
+    span {
+      font-size: inherit;
+      line-height: inherit;
+      font-weight: 600;
+    }
+  }
+
+  // .hero__subtitle
+
+  &__subtitle {
+    max-width: 800px;
+    text-wrap: balance;
+    line-height: 160%;
+    margin-bottom: 60px;
+  }
+
+  // .hero__buttons
+
+  &__buttons {
+    display: flex;
+    align-items: center;
+    gap: 30px;
+  }
+
+  // .hero__button
+
+  &__button {
+    width: 260px;
+    height: 50px;
+    font-weight: 600;
+    border-radius: 5px 5px 5px 5px;
+    color: rgba($color: $white, $alpha: 1.0);
+    background-color: rgba($color: $accent, $alpha: 1.0);
+  }
+
+  // .hero__button--blue
+
+  &__button--blue {}
+
+  // .hero__button--small
+
+  &__button--small {
+    width: 50px;
+    background-color: transparent;
+    border: 2px solid rgba($color: $accent, $alpha: 1.0);
+    color: rgba($color: $accent, $alpha: 1.0);
+    position: relative;
+    // transition: 0.6s;
+
+    &::before {
+      content: 'Заказать консультацию';
+      position: absolute;
+      left: 100%;
+      top: -2px;
+      width: 200px;
+      height: 50px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      border: 2px solid rgba($color: $accent, $alpha: 1.0);
+      border-radius: 0px 5px 5px 0px;
+      font-size: 14px;
+      transform: translateX(30px);
+      opacity: 0;
+      pointer-events: none;
+      transition: .3s;
+      // background-color: rgba($color: $mainColor, $alpha: 1.0);
+    }
+
+    @media (hover:hover) {
+      &:hover {
+        border-radius: 5px 0px 0px 5px;
+
+        &::before {
+          opacity: 1;
+          transform: translateX(0);
+          pointer-events: all;
+        }
+      }
+    }
+  }
+}
+
+.service {
+
+  // .service__content
+
+  &__content {}
+
+  // .service__container
+
+  &__container {}
+
+  // .service__inner
+
+  &__inner {}
+
+  // .service__text
+
+  &__text {
+    border-radius: 10px;
+    box-shadow: 0px 11px 24px 0px rgba(65, 162, 208, 0.15), 0px 43px 43px 0px rgba(65, 162, 208, 0.13), 0px 97px 58px 0px rgba(65, 162, 208, 0.08), 0px 173px 69px 0px rgba(65, 162, 208, 0.02), 0px 270px 76px 0px rgba(65, 162, 208, 0);
+    background: rgb(255, 255, 255);
+    padding: 35px;
+    margin: 50px 0px;
+
+    h2 {
+      font-size: 25px;
+      margin-bottom: 20px;
+    }
+
+    p {
+      margin-bottom: 20px;
+      line-height: 150%;
+    }
+
+    ol {
+      margin-left: 40px;
+      margin-bottom: 20px;
+
+      li+li {
+        margin-top: 10px;
+      }
+    }
+  }
+}
