--- a/main/core/theme/mb/templates/components/header-single.html
+++ b/main/core/theme/mb/templates/components/header-single.html
@@ -62,7 +62,7 @@
           </li>
           <li class="nav__item"><a href="#">Услуги</a> {% comment %} <img src="{% static 'theme/mb/images/icon/chevron-down_white.svg' %}" alt="" /> {% endcomment %}</li>
           <li class="nav__item"><a href="#">Гравировка</a></li>
-          <li class="nav__item"><a href="#">Установка</a></li>
+          <li class="nav__item"><a href="{% url 'service_new' %}">Установка</a></li>
           <li class="nav__item"><a href="#">Оплата</a></li>
           <li class="nav__item"><a href="#">Наши работы</a></li>
           <li class="nav__item"><a href="#">О нас</a></li>
