--- a/main/core/theme/mb/templates/pages/service/service-test.html
+++ b/main/core/theme/mb/templates/pages/service/service-test.html
@@ -3,8 +3,8 @@
 <body>
   <div class="wrapper">
     <div class="hero">
-      <img src="{% static 'theme/mb/images/ustanovka-1-1.jpg' %}" alt="" class="hero__image _aBg">
       <div class="hero__container">
+        <img src="{% static 'theme/mb/images/ustanovka.png' %}" alt="" class="hero__image">
         <div class="hero__inner">
           <div class="breadcrumbs" itemscope="" itemtype="http://schema.org/BreadcrumbList">
             <a href="" itemprop="itemListElement" itemscope="" itemtype="http://schema.org/ListItem"
@@ -34,114 +34,128 @@
         </div>
       </div>
     </div>
-    <section class="service__content">
-      <div class="service__container">
-        <div class="service__inner">
-          <div class="service__text">
-            <p>
-              Выбор памятника на могилу — это очень ответственный процесс, который требует
-              внимательности и тщательного подхода. Ниже я приведу несколько важных факторов, которые
-              следует учитывать при выборе памятника на могилу:
-            </p>
-            <p>
-              Материал: памятники на могилы могут быть изготовлены из разных материалов, таких как гранит,
-              мрамор, искусственные. Необходимо учитывать качество материала и его прочность, чтобы
-              памятник мог прослужить долгие годы.
-            </p>
-            <p>
-              Размер: размер памятника на могилу должен соответствовать размерам могилы и не выглядеть
-              ни слишком маленьким, ни слишком большим. Необходимо учитывать допустимые размеры
-              памятника.
-            </p>
-            <p>
-              Дизайн: дизайн памятника на могилу должен отражать индивидуальность и личность усопшего, а
-              также соответствовать его предпочтениям и желаниям. Можно выбрать разные декоративные
-              элементы, такие как растительные орнаменты, символы религии, портреты, фотографии и т.д.
-              Стоимость: стоимость памятника на могилу может значительно варьироваться в зависимости от
-              материала, дизайна и сложности изготовления. Необходимо учитывать свой бюджет при выборе
-              памятника.
-            </p>
-            <p>
-              Культурные традиции: следует учитывать культурные традиции и обычаи, которые могут
-              регулировать типы и формы памятников на могилы.
-              Важно помнить, что выбор памятника на могилу — это личное решение, которое зависит от
-              индивидуальных предпочтений и ситуации. Поэтому следует уделить достаточно времени и
-              внимания, чтобы выбрать наиболее подходящий памятник.
-            </p>
-            <h2>Гранит и мрамор: в чём разница?</h2>
-            <p>
-              ✅Гранит является более плотным материалом, малопористым, а следовательно, и более
-              прочным. Благодаря этому качеству памятники из такого камня сохраняются на века, прекрасно
-              перенося любые климатические условия, оставаясь практически неизменными на протяжении
-              всего этого времени.
-            </p>
-            <p>
-              ✅Мрамор же по своей структуре более порист, он обладает способностью впитывать воду,
-              которая при замерзании ведёт к образованию трещин.
-              И гранит, и мрамор часто используются при создании ритуальных памятников. Оба материала
-              ассоциируются с вечностью, непоколебимостью, монументальностью.
-            </p>
-            <p> ✅Разница между памятниками из гранита и мрамора заключается, собственно, в самом
-              материале, у которого есть свои объективные свойства. Их необходимо учитывать при заказе
-              надгробия.
-            </p>
-            <p>
-              ✅Мрамор - светло-серого цвета, легче поддаётся обработке. На мраморе можно наносить
-              гравировку имени и дат жизни ушедших, но гравировать портрет напрямую на мраморе мы не
-              рекомендуем. Так как мрамор светло-серый, готовый портрет не будет обладать достаточной
-              контрастностью и его будет плохо видно. Поэтому если Вы выбрали мраморный памятник, но
-              хотите сделать гравировку портрета, в мраморную плиту делается гранитная вставка специально
-              для портрета. Но, бывают случаи, когда наносить портрет человека на памятник нельзя.
-              Например, если он был мусульманином по вероисповеданию. Тогда можно не делать гранитную
-              вставку.
-            </p>
-            <p>
-              ✅Гранит - разные породы обладают разным цветом. Преимущественно используется габбро,
-              обладающий глубоким чёрным цветом. Как материал для изготовления памятника гранит более
-              прочен. Если о мраморных памятниках специалисты говорят о двух сотнях лет сохранности
-              внешнего вида (7-8 поколений), то следы разрушения на гранитных изделиях заметны спустя
-              почти 600 лет. На граните можно гравировать любой текст, любое изображение с
-              фотографической точностью. Современное оборудование позволяет создавать поистине
-              волшебные вещи. Из-за хорошего контраста картинка на гранитном памятнике видна гораздо
-              лучше. Видимо, поэтому гранитные памятники заказывают чаще.
-            </p>
-            <p>
-              ✅И гранит, и мрамор – горные породы, возникшие в результате физико-химических процессов из
-              разных веществ. Мрамор возник в результате метаморфизма из известняка, который, в свою
-              очередь, является результатом деятельности организмов. А гранит – порода магматического
-              происхождения, зарождается в результате вулканической деятельности. Видимо, именно эти
-              особенности происхождения горных пород и влияют на их прочность.
-              Установка памятника из гранита — это сложный и ответственный процесс, который требует
-              соблюдения определённых правил и технологий.
-            </p>
-            <p>
-              Установка памятника должна проводиться только в тёплый период, с 15 мая по 15 октября, чтобы
-              обеспечить долговечность и устойчивость изделия. Перед установкой необходимо провести
-              расчёты и обследование места установки, чтобы определить особенности ландшафта и структуру
-              грунта. Это позволит правильно подготовить фундамент под памятник и обеспечить его
-              долговечность.
-            </p>
-            <p>
-              Технология установки памятника из гранита включает следующие этапы:
-            </p>
-            <ol>
-              <li>Планировка(подготовка) участка под фундамент.</li>
-              <li>Установка металлического каркаса под фундамент.</li>
-              <li>Изготовление внешней и внутренней опалубки из досок.</li>
-              <li>Подготовка бетона для фундамента и заливка его в опалубку.</li>
-              <li>Облицовка плиткой.</li>
-              <li>Затирка швов.</li>
-              <li>Подготовка монтажных отверстий в подставке и памятнике.</li>
-              <li>Монтаж подставки и цветника с помощью специального клея по камню.</li>
-              <li>Установка самого памятника вручную или с использованием крана-манипулятора.</li>
-              <li>Благоустройство вокруг надмогильного сооружения.</li>
-            </ol>
-            <p>
-              Необходимо помнить о том, что монтаж памятника – это трудоемкий и непростой процесс,
-              требующий опыта и квалификации. Если в ходе монтажа будут допущены ошибки, это может
-              привести к перекосу монумента или его полному уходу под землю. Чтобы избежать такой
-              проблемы необходимо заказать установку памятника специалистам.
-            </p>
+    <section class="service-content">
+      <div class="service-content__container">
+        <div class="service-content__inner">
+          <h2 class="service-content__title _title-h2">Выбор монумента</h2>
+          <div class="service-content__row">
+            <div class="service-content__col">
+              <img src="{% static 'theme/mb/images/ustanovka-2.png' %}" alt="" class="">
+            </div>
+            <div class="service-content__col">
+              <div class="service-content__text _text">
+                <p>
+                  Выбор памятника на могилу — это очень ответственный процесс, который требует
+                  внимательности и тщательного подхода. Ниже я приведу несколько важных факторов, которые
+                  следует учитывать при выборе памятника на могилу:
+                </p>
+                <p>
+                  <span>Материал: </span>памятники на могилы могут быть изготовлены из разных материалов, таких как
+                  гранит,
+                  мрамор, искусственные. Необходимо учитывать качество материала и его прочность, чтобы
+                  памятник мог прослужить долгие годы.
+                </p>
+                <p>
+                  <span>Размер: </span>размер памятника на могилу должен соответствовать размерам могилы и не выглядеть
+                  ни слишком маленьким, ни слишком большим. Необходимо учитывать допустимые размеры
+                  памятника.
+                </p>
+                <p>
+                  <span>Дизайн: </span>дизайн памятника на могилу должен отражать индивидуальность и личность усопшего,
+                  а
+                  также соответствовать его предпочтениям и желаниям. Можно выбрать разные декоративные
+                  элементы, такие как растительные орнаменты, символы религии, портреты, фотографии и т.д.
+                </p>
+                <p>
+                  <span>Стоимость: </span>стоимость памятника на могилу может значительно варьироваться в зависимости от
+                  материала, дизайна и сложности изготовления. Необходимо учитывать свой бюджет при выборе
+                  памятника.
+                </p>
+                <p>
+                  <span>Культурные традиции: </span>следует учитывать культурные традиции и обычаи, которые могут
+                  регулировать типы и формы памятников на могилы.
+                </p>
+                <p>
+                  <i>
+                    Важно помнить, что выбор памятника на могилу — это личное решение, которое зависит от
+                    индивидуальных предпочтений и ситуации. Поэтому следует уделить достаточно времени и
+                    внимания, чтобы выбрать наиболее подходящий памятник.
+                  </i>
+                </p>
+              </div>
+              <a href="" class="service-content__btn _btn">Перейти в каталог</a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section class="service-content">
+      <div class="service-content__container">
+        <div class="service-content__inner">
+          <h2 class="service-content__title _title-h2">Гранит и мрамор: в чём разница?</h2>
+          <div class="service-content__row">
+            <div class="service-content__col">
+              <img src="{% static 'theme/mb/images/ustanovka-3.png' %}" alt="" class="">
+            </div>
+            <div class="service-content__col">
+              <div class="service-content__text _text">
+                <p>
+                  <span>Гранит</span> является более плотным материалом, малопористым, а следовательно, и более
+                  прочным. Благодаря этому качеству памятники из такого камня сохраняются на века, прекрасно
+                  перенося любые климатические условия, оставаясь практически неизменными на протяжении
+                  всего этого времени.
+                </p>
+                <p>
+                  <span>Мрамор</span> же по своей структуре более порист, он обладает способностью впитывать воду,
+                  которая при замерзании ведёт к образованию трещин. И гранит, и мрамор часто используются при создании
+                  ритуальных памятников. Оба материала
+                  ассоциируются с вечностью, непоколебимостью, монументальностью.
+                </p>
+                <p>
+                  Разница между памятниками из <span>гранита</span> и <span>мрамора</span> заключается, собственно, в
+                  самом
+                  материале, у которого есть свои объективные свойства. Их необходимо учитывать при заказе
+                  надгробия.
+                </p>
+              </div>
+              <button class="service-content__btn _btn">Получить консультацию</button>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section class="service-content">
+      <div class="service-content__container">
+        <div class="service-content__inner">
+          <h2 class="service-content__title _title-h2">Технология установки памятника из гранита включает следующие
+            этапы</h2>
+          <div class="service-content__row">
+            <div class="service-content__col">
+              <img src="{% static 'theme/mb/images/ustanovka.png' %}" alt="" class="">
+            </div>
+            <div class="service-content__col">
+              <div class="service-content__text _text">
+                <ul>
+                  <li>Планировка(подготовка) участка под фундамент</li>
+                  <li>Установка металлического каркаса под фундамент</li>
+                  <li>Изготовление внешней и внутренней опалубки из досок</li>
+                  <li>Подготовка бетона для фундамента и заливка его в опалубку</li>
+                  <li>Облицовка плиткой</li>
+                  <li>Затирка швов</li>
+                  <li>Подготовка монтажных отверстий в подставке и памятнике</li>
+                  <li>Монтаж подставки и цветника с помощью специального клея по камню</li>
+                  <li>Установка самого памятника вручную или с использованием крана-манипулятора</li>
+                  <li>Благоустройство вокруг надмогильного сооружения</li>
+                </ul>
+                <p>
+                  Необходимо помнить о том, что монтаж памятника – это трудоемкий и непростой процесс,
+                  требующий опыта и квалификации. Если в ходе монтажа будут допущены ошибки, это может
+                  привести к перекосу монумента или его полному уходу под землю. Чтобы избежать такой
+                  проблемы необходимо заказать установку памятника специалистам.
+                </p>
+              </div>
+              <button class="service-content__btn _btn">Заказать установку памятника</button>
+            </div>
           </div>
         </div>
       </div>
