--- a/#src/scss/home.scss
+++ b/#src/scss/home.scss
@@ -746,10 +746,18 @@
 
 .hero {
   position: relative;
+  // background-color: rgba($color: $accent, $alpha: .03);
+  background: rgb(65, 162, 208);
+  background: linear-gradient(0deg, rgba(65, 162, 208, 0.09) 50%, rgba(255, 255, 255, 1) 100%);
 
   // .hero__image
   &__image {
-    object-position: right;
+    position: absolute;
+    right: 0;
+    top: 50%;
+    transform: translateY(-50%);
+    width: 550px;
+    height: 80%;
   }
 
   .breadcrumbs {
@@ -770,7 +778,7 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
-    padding: 80px 0px;
+    padding: 100px 0px;
   }
 
   // .hero__title
