--- a/main/core/theme/mb/templates/components/footer.html
+++ b/main/core/theme/mb/templates/components/footer.html
@@ -15,8 +15,8 @@
         <ul class="footer__list">
           <li class="footer__item--first">Услуги</li>
           <li class="footer__item"><a href="">Доставка</a></li>
-          <li class="footer__item"><a href="">Установка</a></li>
-          <li class="footer__item"><a href="">Гравировка</a></li>
+          <li class="footer__item"><a href="{% url 'service_new' %}">Установка</a></li>
+          <li class="footer__item"><a href="{% url 'service_grav' %}">Гравировка</a></li>
         </ul>
         <ul class="footer__list">
           <li class="footer__item--first">Меню</li>
