--- a/main/core/theme/mb/templates/components/header.html
+++ b/main/core/theme/mb/templates/components/header.html
@@ -23,7 +23,7 @@
             <a href="#">Услуги</a>
             <!-- <img src="{% static 'theme/mb/images/icon/chevron-down_white.svg' %}" alt="" /> -->
           </li>
-          <li class="nav__item"><a href="#">Гравировка</a></li>
+          <li class="nav__item"><a href="{% url 'service_grav' %}">Гравировка</a></li>
           <li class="nav__item"><a href="{% url 'service_new' %}">Установка</a></li>
           <li class="nav__item"><a href="#">Оплата</a></li>
           <li class="nav__item"><a href="#">Наши работы</a></li>
