--- a/main/core/theme/mb/css/main.css
+++ b/main/core/theme/mb/css/main.css
@@ -893,39 +893,41 @@ html.lock body::before {
   margin-top: 10px;
 }
 
-.about__row {
-  display: flex;
-  gap: 30px;
+.about__grid {
+  display: grid;
+  grid-template-columns: 1fr 300px;
+  gap: 70px;
+  width: 100%;
 }
 
-.about__col {
-  flex: 1 1 50%;
-}
-
-.about__title {
-  margin-bottom: 20px;
-}
-
-.about__subtitle {
-  font-size: 20px;
+.about__grid-item p {
   line-height: 140%;
-  max-width: 550px;
-  text-wrap: balance;
-  color: rgba(58, 67, 75, 0.7);
 }
 
-.about__text p + p {
-  margin-top: 20px;
+.about__grid-item p + p {
+  margin-top: 15px;
 }
 
-.about .body-service__row {
-  padding: 120px 0px 60px;
+.about__grid-item img {
+  width: 100%;
+  height: 350px;
+  object-fit: cover;
+  object-position: top;
+  border-radius: 8px;
+  margin-top: 30px;
 }
 
-.text {
-  font-size: 17px;
-  line-height: 150%;
-  color: rgba(58, 67, 75, 0.8);
+.about__grid-image {
+  width: 100%;
+  height: 100% !important;
+  object-fit: cover;
+}
+
+.about__grid-image img {
+  height: 100%;
+  width: 100%;
+  object-fit: cover;
+  margin-top: 0px;
 }
 
 .service-page__item {
