--- a/main/core/theme/mb/templates/components/header-single.html
+++ b/main/core/theme/mb/templates/components/header-single.html
@@ -65,7 +65,7 @@
           <li class="nav__item"><a href="{% url 'service_new' %}">Установка</a></li>
           <li class="nav__item"><a href="#">Оплата</a></li>
           <li class="nav__item"><a href="#">Наши работы</a></li>
-          <li class="nav__item"><a href="#">О нас</a></li>
+          <li class="nav__item"><a href="{% url 'about' %}">О нас</a></li>
           <li class="nav__item"><a href="#">Контакты</a></li>
         </ul>
       </nav>
