--- a/main/core/theme/mb/templates/pages/about.html
+++ b/main/core/theme/mb/templates/pages/about.html
@@ -1,197 +1,176 @@
 {% extends 'base.html' %} {% load static %} {% block content %}
-<div class="wrapper">
-  {% include "components/header-single.html" %}
-  <main class="page">
-    <div class="single-banner" style="background-image: url({% static "theme/mb/images/about-page.jpg" %})"
-      data-speed="70">
-      <h1 class="stock__title _title">О нас</h1>
-      <div class="breadcrumbs" itemscope="" itemtype="http://schema.org/BreadcrumbList">
-        <a href="/" itemprop="itemListElement" itemscope="" itemtype="http://schema.org/ListItem"
-          class="breadcrumbs__item">
-          Главная
-          <meta itemprop="position" content="1" />
-        </a>
-        <a href="/" itemprop="itemListElement" itemscope="" itemtype="http://schema.org/ListItem"
-          class="breadcrumbs__item">
-          Акции
-          <meta itemprop="position" content="2" />
-        </a>
-        <span itemprop="name" class="breadcrumbs__item">
-          О нас
-          <meta itemprop="position" content="3" />
-        </span>
+<main class="page">
+  <div class="hero">
+    <div class="hero__container">
+      <img src="{% static 'theme/mb/images/about-hero.png' %}" alt="" class="hero__image" />
+      <div class="hero__inner">
+        <div class="breadcrumbs" itemscope="" itemtype="http://schema.org/BreadcrumbList">
+          <a href="" itemprop="itemListElement" itemscope="" itemtype="http://schema.org/ListItem"
+            class="breadcrumbs__item">
+            Главная
+            <meta itemprop="position" content="1" />
+          </a>
+          <span itemprop="name" class="breadcrumbs__item">
+            О нас
+            <meta itemprop="position" content="2" />
+          </span>
+        </div>
+        <h1 class="hero__title">
+          О компании <span>"Акрополь"</span>
+        </h1>
+        <p class="hero__subtitle">
+          Компания “Акрополь” является одним из лидеров изготовления и продажи изделий из
+          натурального гранита в Томской области.
+          Основанная в 2010 году, компания уже более 10 лет успешно работает на внутреннем рынке
+          России.
+        </p>
+        <div class="hero__buttons">
+          <button type="button" class="hero__button hero__button--blue">Оставить заявку</button>
+          <!-- <button type="button" class="hero__button hero__button--small">?</button> -->
+        </div>
       </div>
     </div>
-    <section class="about">
-      <div class="about__container">
-        <div class="about__row">
-          <div class="about__col">
-            <h2 class="about__title _title">Почему мы?</h2>
-            <p class="about__subtitle">
-              Мы готовим очень вкусную домашнюю еду и в нашем кафе можно организовать любое мероприятие
+  </div>
+  <section class="about">
+    <div class="about__container">
+      <div class="about__inner">
+        <div class="about__grid">
+          <div class="about__grid-item">
+            <p>
+              В нашем интернет-магазине вы можете ознакомиться с широким ассортиментом памятников и
+              выбрать подходящий вариант для вашего близкого.
             </p>
+            <p>
+              Предоставляем гарантию на все наши памятники на срок до 30 лет.
+              Мы несём полную ответственность за качество своих работ.
+            </p>
+            <p>Преимущественно мы занимается изготовлением гранитных памятников и надгробий на
+              протяжении многих лет, и мы можем с уверенностью сказать, что гранитные памятники обладают
+              рядом преимуществ перед памятниками из других материалов.
+            </p>
+            <img src="{% static 'theme/mb/images/about.jpg' %}" alt="">
           </div>
-          <div class="about__col">
-            <div class="about__text text">
-              <p>
-                Кафе трапеза - уютное домашнее кафе современной кухни. Наше меню — простая и понятная еда.
-                Здесь нет пафоса и дресс-кода, а есть непринужденность, простота и искренность. Сюда приходят соседи
-                нашего района , с детьми, с друзьями, коллегами, приводят своих гостей к нам, как к себе домой!
-              </p>
-              <p>
-                При приготовлении блюд мы используем органические продукты - продукцию сельского хозяйства и пищевой промышленности изготовленную без использования синтетических минеральных удобрений, регуляторов роста, искусственных пищевых добавок, а также без использования генетически модифицированных продуктов. Приготовленная нами пища полезна и отличается отменными вкусовыми качествами.
-              </p>
+          <div class="about__grid-item">
+            <div class="about__grid-image">
+              <img src="{% static 'theme/mb/images/about-1.jpg' %}" alt="">
             </div>
-          </div>
-        </div>
-        <div class="body-service__row">
-          <div class="body-service__col">
-            <div class="body-service__image">
-              <img src="{% static 'theme/mb/images/hall.jpg' %}" alt="">
-              <span>Пролетарская 123</span>
-            </div>
-          </div>
-          <div class="body-service__col">
-            <h2 class="body-service__title _title">Заказать обед <br> в столовой</h2>
-            <p class="body-service__subtitle">У нас есть два зала с посадкой до 50 человек</p>
-            <div class="body-service__image">
-              <img src="{% static 'theme/mb/images/hall-2.jpg' %}" alt="">
-              <span>Ракетная 123</span>
-            </div>
-            <button type="button" class="body-service__btn _btn">Забронировать зал</button>
           </div>
         </div>
       </div>
-    </section>
-    <section class="contact">
-      <div class="contact__container">
-        <h2 class="contact__title _title">Контакты</h2>
-        <div class="contact__row">
-          <div class="contact__col contact-info">
-            <div class="contact-info__row">
-              <div class="contact-info__icon">
-                <i class="fa-solid fa-location-dot"></i>
-              </div>
-              <div class="contact-info__content">
-                г.Томск,<br />
-                улица Ленина, дом 23а
-              </div>
-            </div>
-            <div class="contact-info__row">
-              <div class="contact-info__icon">
-                <i class="fa-solid fa-location-dot"></i>
-              </div>
-              <div class="contact-info__content">
-                г.Томск,<br />
-                проспект Фрунзе, дом 28в
-              </div>
-            </div>
-            <div class="contact-info__row">
-              <div class="contact-info__icon">
-                <i class="fa-solid fa-phone-volume"></i>
-              </div>
-              <a href="#" class="contact-info__content"> 8(999) 999-99-99 </a>
-            </div>
-            <div class="contact-info__row">
-              <div class="contact-info__icon">
-                <i class="fa-solid fa-envelope"></i>
-              </div>
-              <a href="#" class="contact-info__content"> trapeza@mail.ru </a>
-            </div>
+    </div>
+  </section>
+  <section class="service-content">
+    <div class="service-content__container">
+      <div class="service-content__inner">
+        <div class="service-content__row">
+          <div class="service-content__col">
+            <img src="{% static 'theme/mb/images/about-3.png' %}" alt="" class="" />
           </div>
-          <div class="contact__col form">
-            <form action="" class="form__form">
-              <div class="form__group require">
-                <label for="contact-name" class="require">Имя</label>
-                <input type="text" name="contact-name" id="contact-name" placeholder="ФИО" class="form__controls" />
+          <div class="service-content__col">
+            <div class="service-content__text _text">
+              <p>
+                Во-первых, гранит - очень прочный и долговечный материал, который способен сохранять свой
+                первоначальный вид на протяжении столетий.
+              </p>
+              <p>
+                Во-вторых, гранитные памятники имеют очень элегантный и стильный вид, благодаря чему они
+                будут отлично смотреться на могиле.
+              </p>
+              <p>
+                В-третьих, гранит устойчив к воздействию погодных условий и не требует особого ухода.
+                И наконец, гранит - экологически чистый материал, который не наносит вреда окружающей среде
+                и здоровью человека.
+              </p>
+              <p>
+                Компания "Акрополь" создает неповторимые надгробия, которые сохранят память о любимых
+                навсегда. Мы ценим каждого клиента и готовы воплотить ваши идеи в камне.
+              </p>
+              <p>
+                У нас вы найдете широкий выбор дизайнов и материалов для памятников любой сложности.
+                Доверьте создание памятника профессионалам с опытом более 10 лет.
+              </p>
+              <p><i>Сохраните достойную память о близких и любимых в граните - выбирайте компанию "Акрополь"!</i></p>
+            </div>
+            <button class="service-content__btn _btn" data-service="Заказать памятник">Заказать памятник</button>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+  <section class="index-contact">
+    <div class="index-contact__container">
+      <div class="index-contact__grid">
+        <div class="index-contact__item">
+          <h2 class="index-contact__title">Мы готовы ответить на все <span>ваши вопросы</span></h2>
+          <ul class="index-contact__list">
+            <li>
+              <img src="{% static 'theme/mb/images/icon/check-green.svg' %}" alt="" class="index-contact__list-icon" />
+              <p class="index-contact__list-text"><span>Проконсультируем</span> по материалу памятника</p>
+            </li>
+            <li>
+              <img src="{% static 'theme/mb/images/icon/check-green.svg' %}" alt="" class="index-contact__list-icon" />
+              <p class="index-contact__list-text"><span>Поможем определиться </span>с типом памятника и заказать его
+                производство</p>
+            </li>
+            <li>
+              <img src="{% static 'theme/mb/images/icon/check-green.svg' %}" alt="" class="index-contact__list-icon" />
+              <p class="index-contact__list-text"><span>Расскажем все</span> про доставку и установку</p>
+            </li>
+          </ul>
+        </div>
+        <div class="index-contact__item">
+          <div class="index-contact__mobile" style="background-image: url('{% static 'theme/mb/images/mobile.png' %}')">
+            <div class="index-contact__logo">
+              <img src="{% static 'theme/mb/images/logo-black.png' %}" alt="" />
+            </div>
+            <p class="index-contact__mobile-text">
+              Свяжитесь с нами! <br />
+              Мы обязательно поможем!
+            </p>
+            <div class="index-contact__mobile-phones">
+              <a href="">+7(3822)-210-915<img src="{% static 'theme/mb/images/icon/phone-black.svg' %}" alt="" /></a>
+              <a href="">+7-900-921-09-15<img src="{% static 'theme/mb/images/icon/phone-mobile.svg' %}" alt="" /></a>
+            </div>
+            <a href="" class="index-contact__call _btn">Позвонить</a>
+          </div>
+        </div>
+        <div class="index-contact__item">
+          <form action="" method="POST" class="form index-contact__form">
+            <h3 class="form__title">Заполните форму</h3>
+            <p class="form__text">Оставьте заявку - мы обязательно с вами свяжемся</p>
+            <div class="form__inner">
+              <input type="text" name="name" id="id_name" class="form__controls" placeholder="Ваше имя" />
+              <input type="tel" name="phone" id="id_phone" class="form__controls" placeholder="Номер телефона" />
+              <div class="form__social-inner">
+                <label for="tg" class="form__controls-label">
+                  <input type="checkbox" id="tg" name="social" />
+                  <img src="{% static 'theme/mb/images/icon/tg.svg' %}" alt="" />
+                </label>
+                <label for="vk" class="form__controls-label">
+                  <input type="checkbox" id="vk" name="social" />
+                  <img src="{% static 'theme/mb/images/icon/vk.svg' %}" alt="" />
+                </label>
+                <label for="wh" class="form__controls-label">
+                  <input type="checkbox" id="wh" name="social" />
+                  <img src="{% static 'theme/mb/images/icon/wh.svg' %}" alt="" />
+                </label>
               </div>
-              <div class="form__group">
-                <label for="contact-phone" class="require">Телефон</label>
-                <input type="text" name="contact-phone" id="contact-phone" placeholder="Телефон*"
-                  class="form__controls" />
-              </div>
-              <div class="form__group">
-                <label for="contact-email" class="require">Email</label>
-                <input type="text" name="contact-email" id="contact-email" placeholder="Email"
-                  class="form__controls" />
-              </div>
-              <div class="form__group">
-                <label for="contact-message">Коментарий к заявке</label>
-                <textarea type="text" rows="5" name="contact-message" id="contact-message" placeholder="Комментарий"
-                  class="form__controls"></textarea>
-              </div>
-              <div class="form__group">
-                <button type="submit" class="form__btn">Отправить</button>
-                <div class="form__agree">
-                  <input type="checkbox" id="agree-checkbox" checked />
-                  <label for="agree-checkbox">Даю согласие на обработку персональных данных</label>
+              <div class="form__bottom">
+                <button type="submit" class="form__submit _btn">Отправить</button>
+                <div class="form__agreement">
+                  <input type="checkbox" name="agrement" id="id_agrement" checked />
+                  <label for="id_agreement" class="form__label">
+                    Я даю свое согласие на обработку персональных данных и соглашаюсь с <a href="">политикой
+                      конфиденциальности</a>
+                  </label>
                 </div>
               </div>
-            </form>
-          </div>
+            </div>
+          </form>
         </div>
-        <div class="contact__map">
-          <iframe
-            src="https://yandex.ru/map-widget/v1/?um=constructor%3Aa514d171383ef2208b84f635ce68ef69fead16ae40de4d730cfddb8faf30a665&amp;source=constructor"
-            width="100%" height="500" frameborder="0"></iframe>
-        </div>
-      </div>
-    </section>
-    <footer class="footer">
-      <div class="footer__container">
-        <div class="footer__grid">
-          <div class="footer__col">
-            <p class="footer__title">Контакты</p>
-            <div class="footer__item">
-              <span>Адрес: </span>
-              <span>г.Томск ул. Ленина 193</span>
-            </div>
-            <div class="footer__item">
-              <span>Телефон: </span>
-              <span>8(999) 999-99-99</span>
-            </div>
-            <div class="footer__item">
-              <span>Время работы: </span>
-              <span>пн-пт: 8:00-20:00, сб-вс: 10:00-20:00</span>
-            </div>
-            <div class="footer__item">
-              <span>Электронная почта: </span>
-              <span>trapeza@mail.ru</span>
-            </div>
-            <div class="footer__social">
-              <a href="#"><img src="img/icon/i-vk.svg" alt="" /></a>
-              <a href="#"><img src="img/icon/i-wa.svg" alt="" /></a>
-              <a href="#"><img src="img/icon/i-telegram.svg" alt="" /></a>
-            </div>
-          </div>
-          <div class="footer__col">
-            <p class="footer__title">Меню</p>
-            <nav class="footer__nav">
-              <a href="#">Горячее</a>
-              <a href="#">Салаты</a>
-              <a href="#">Выпечка</a>
-              <a href="#">Банкетное меню</a>
-              <a href="#">Поминальное меню</a>
-              <a href="#">Меню дня</a>
-            </nav>
-          </div>
-          <div class="footer__col">
-            <div class="footer__logo"><img src="img/logo-2-white.svg" alt="" /></div>
-            <nav class="footer__nav">
-              <a href="#">Политика конфиденциальности</a>
-              <a href="#">Статьи</a>
-              <a href="#">Отзывы</a>
-              <a href="#">Контакты</a>
-            </nav>
-          </div>
-        </div>
-      </div>
-    </footer>
-    <div class="author">
-      <div class="author__container">
-        <div class="author__inner">Разработка сайта | <a href="#">РА Аврора</a></div>
       </div>
     </div>
-  </main>
-</div>
+  </section>
+  {% include "../components/map.html" %}
+</main>
 {% endblock %}
