--- a/#src/scss/main.scss
+++ b/#src/scss/main.scss
@@ -206,6 +206,7 @@ body {
 
 
 @import './pages/service/service-detail';
+@import './pages/gallery/gallery';
 
 
 @import './components/mini-cart/mini-cart';
