--- a/#src/templates/theme/components/header.html
+++ b/#src/templates/theme/components/header.html
@@ -26,7 +26,7 @@
           <li class="nav__item"><a href="{% url 'service_grav' %}">Гравировка</a></li>
           <li class="nav__item"><a href="{% url 'service_new' %}">Установка</a></li>
           <li class="nav__item"><a href="#">Оплата</a></li>
-          <li class="nav__item"><a href="#">Наши работы</a></li>
+          <li class="nav__item"><a href="{% url 'gallery' %}">Наши работы</a></li>
           <li class="nav__item"><a href="{% url 'about' %}">О нас</a></li>
           <li class="nav__item"><a href="#">Контакты</a></li>
         </ul>
