--- a/main/core/theme/mb/css/main.css
+++ b/main/core/theme/mb/css/main.css
@@ -833,6 +833,9 @@ html.lock body::before {
 .hero__button {
   width: 260px;
   height: 50px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
   font-weight: 600;
   border-radius: 5px 5px 5px 5px;
   color: white;
@@ -2673,6 +2676,80 @@ section {
   margin-top: 50px;
 }
 
+.gallery__inner {
+  display: flex;
+  align-items: flex-start;
+  gap: 50px;
+}
+
+.gallery__category {
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  gap: 10px;
+  position: sticky;
+  top: 100px;
+  padding: 30px 20px;
+  border-radius: 15px;
+  background-color: white;
+  border: 1px solid rgba(58, 67, 75, 0.06);
+  box-shadow: 0px 8px 17px 0px rgba(65, 162, 208, 0.1), 0px 30px 30px 0px rgba(65, 162, 208, 0.09), 0px 68px 41px 0px rgba(65, 162, 208, 0.05), 0px 121px 48px 0px rgba(65, 162, 208, 0.01), 0px 188px 53px 0px rgba(65, 162, 208, 0);
+}
+
+.gallery__category-link {
+  font-size: 18px;
+  font-weight: 400;
+  line-height: 140%;
+  padding: 5px 20px;
+  text-align: left;
+  color: #949494;
+}
+
+.gallery__category-link._active {
+  color: #3a434b;
+}
+
+.gallery__content {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  gap: 80px;
+}
+
+.gallery__images {
+  width: 100%;
+}
+
+.gallery__images-grid {
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(290px, 1fr));
+  gap: 20px;
+}
+
+.gallery__image {
+  display: flex;
+  box-shadow: 0px 8px 17px 0px rgba(65, 162, 208, 0.1), 0px 30px 30px 0px rgba(65, 162, 208, 0.09), 0px 68px 41px 0px rgba(65, 162, 208, 0.05), 0px 121px 48px 0px rgba(65, 162, 208, 0.01), 0px 188px 53px 0px rgba(65, 162, 208, 0);
+  border-radius: 10px;
+  overflow: hidden;
+  border: 1px solid rgba(58, 67, 75, 0.1);
+}
+
+.gallery__image img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  transition: 0.5s;
+}
+
+.gallery__images-title {
+  text-align: center;
+  font-weight: 500;
+  font-size: 30px;
+  margin-bottom: 40px;
+  text-wrap: balance;
+  line-height: 120%;
+}
+
 .mini-cart {
   position: fixed;
   top: 0;
@@ -3007,6 +3084,12 @@ section {
   }
 }
 
+@media screen and (min-width: 920px) {
+  .gallery__category {
+    min-width: 350px;
+  }
+}
+
 @media screen and (min-width: 1200px) {
   .category-details__col .close {
     display: none;
@@ -3178,6 +3261,14 @@ section {
 
   ._btn:hover {
     background-color: #29779c;
+  }
+
+  .gallery__category-link:hover {
+    color: #3a434b;
+  }
+
+  .gallery__image:hover img {
+    transform: scale(1.05);
   }
 }
 
